--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <div class="row">
       <nav class="col-12 col-sm-4 col-lg-3">
         <div class="list-group">
-          <a href="index.html" class="list-group-item active">Home</a>
+          <a href="index.html" class="list-group-item">Home</a>
           <a href="trucks.html" class="list-group-item">Trucks</a>
-          <a href="sedans.html" class="list-group-item">Sedans</a>
-          <a href="suvs.html" class="list-group-item">SUVs</a>
+          <a href="sedans.html" class="list-group-item active">Sedans</a>
+          <a href="suv.html" class="list-group-item">SUVs</a>
         </div>
       </nav>
 
