--- a/sedans.html
+++ b/sedans.html
@@ -22,7 +22,7 @@
           <a href="index.html" class="list-group-item">Home</a>
           <a href="trucks.html" class="list-group-item">Trucks</a>
           <a href="sedans.html" class="list-group-item active">Sedans</a>
-          <a href="suvs.html" class="list-group-item">SUVs</a>
+          <a href="suv.html" class="list-group-item">SUVs</a>
         </div>
       </nav>
 
