--- a/suv.html
+++ b/suv.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Trucks | The Garage</title>
+    <title>SUVs | The Garage</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,11 +9,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Bungee|Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css"
+    <link rel="stylesheet" href="styles/suv.css"
   </head>
   <body>
     <header>
-      <h1>Trucks</h1>
+      <h1>SUVs</h1>
     </header>
 
     <div class="row">
@@ -28,22 +28,22 @@
 
       <section class="col-12 col-sm-8 col-lg-9">
         <article>
-          <h2>What car is best for you?</h2>
+          <h2>2018 Chevrolet Tahoe</h2>
           <p>
-          Look around places where you spend time.  Identify safe place such as under a sturdy piece of furniture or against an interior wall
-          in your home, office or school so that when the shaking starts, you Drop to the ground, Cover your head and neck with your arms, and
-          if a safer place is nearby, crawl to it and Hold On.
+          If you're looking for large SUVs the 2018 Chevrolet Tahoe ranks near the top of the large SUV class because it offers a great combination of V8 power, a cushioned ride, and a feature-filled, high-end cabin.
+          <img src="img/suv/tahoe.jpg" />
           </p>
+          <h2>2018 Honda CR-V</h2>
           <p>
-          When the shaking stops, look around. If there is a clear path to safety, leave the building and go to an open space away from damaged
-          areas.
+          On the other hand the 2018 Honda CR-V's well-balanced everyday performance vaults it toward the top of our rankings. It boasts good safety scores, a high-quality interior, and some of the most spacious passenger and cargo room in its class.
+          <img src="img/suv/honda.jpg" />
           </p>
         </article>
       </section>
     </div> <!--End row -->
 
     <footer>
-      &#169; 2017 - Marc Hauschildt
+      &#169; 2017
     </footer>
 
     <!-- Optional JavaScript -->
