--- a/suv.html
+++ b/suv.html
@@ -43,7 +43,7 @@
     </div> <!--End row -->
 
     <footer>
-      &#169; 2017
+      &#169; 2017 - redbeard
     </footer>
 
     <!-- Optional JavaScript -->
