--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div> <!--End row -->
 
     <footer>
-      &#169; 2017 - Marc Hauschildt
+      &#169; 2017 - redbeard
     </footer>
 
     <!-- Optional JavaScript -->
